Fix Legend Not Displaying

--- a/d3-reusable-charts/examples/example-2.htm
+++ b/d3-reusable-charts/examples/example-2.htm
@@ -227,6 +227,8 @@
             d3.select('#' + $el.chartContainer.attr('id'))
                 .datum(sumData)
                 .call(chart);
+
+            resizePageElements();
         }
 
         // Summarize the data to work with the chart module
